@@ -1,5 +1,8 @@
+AUX sogod.confd 3033 RMD160 6f3de22c18324cde833ae805ca6b997f47f65be3 SHA1 fbb45d9a42f18baeb37f31f062f682aa3d9a83a6 SHA256 4bc4617ed7af02251b81ea11bb4152e7b95561c0d3d36e3f14c0f5bfb61a790f
 AUX sogod.initd 1763 RMD160 9b68d4650cf5aacab5e9896193e1d8a18613458e SHA1 c852e81ded69911c359ac5a551414afc119b26b2 SHA256 3f1a6764a7c2ae47080e916fadfcb2139e0a237d3ee8cd1257a5e024a090ee59
+AUX sogod.initd.1 1743 RMD160 76bbc10b05012859c4ec6b1cddd2c33a19f0c549 SHA1 c424aa09b1baf437d2f6b087688f4fa486ee7136 SHA256 f21c6fe81da61c5dc6859daeb4d79f06edd16458895352216c66f45a4be27211
 DIST SOGo-1.1.0.tar.gz 3613661 RMD160 b6fd66c0825f34e3fbc12d23c9b8c144a5b9cd65 SHA1 0e19f79fd764e9deba14a6346636b7ee86832014 SHA256 950e1a954d8905e187e09336893c50b3c7a16de42ada5c50932766974d5e7a13
-EBUILD sogo-1.1.0-r1.ebuild 4574 RMD160 e5bbe37f8230b149882c93b2acf9cb46542a56ca SHA1 692d8dbdfda2e293f7d3cc7bf5cae0d00607eb0b SHA256 32d502c320cee0314dbbe0b6c1fbee6578477170d8e53f119b569026d5ad07b3
-MISC ChangeLog 359 RMD160 fd68b09bedc7b556db57c0d68b97cef27723e1c2 SHA1 c5a285e2a64f3da03ebc9b6bf412277ad12e555c SHA256 b27418cd71193c7cffa5e73f19231cb2c9f372703c58d2ab880ef68d06139ec8
+EBUILD sogo-1.1.0-r1.ebuild 4622 RMD160 fd2ebec0b08f961365f9a41af6012a6123144296 SHA1 c2fd21238b9cb529342442d062ae69bd7f17ecc4 SHA256 f3cfd8c1b15fce2249ec887be5326dad9f218581300519dfbd9a3cd6879712a5
+EBUILD sogo-9999.ebuild 6007 RMD160 022ceae107820e33ef7188bebb04e52921c8a28d SHA1 8a3d91cecd7d60de7ee526712ab03be11dde95eb SHA256 2e6282740d026d5ebd4b7ecef9b98986197fbcb40272be49b8767bd1811d6373
+MISC ChangeLog 476 RMD160 1572a4c33f6bd4b6b1042acd6a12b5ec91d44b87 SHA1 44464b83c63eb11d3a206485e027cb086508e2a7 SHA256 0dbcccf6808cd38895cd1b70925d81dc8a85fa35ec198015cddcd4caaa875d26
 MISC metadata.xml 793 RMD160 e5e134c336e1294210a98e7ecdf2182b3548eedb SHA1 e168a20cbcf7834b5f9bdd68b5e85b6202f72c35 SHA256 a48efb3457db158cb5420394060ae92c2d3b232a4f01e804e903b1154f80560b
